flexbox wrapping on items and styling + hiding status bar when tot == 0 + navbar styling with logo + box-shadow for iPhone fix

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -5,6 +5,7 @@ html, body {
 * {
   margin: 0;
   font-family: "atlason",Helvetica,"Neue Helvetica",Arial,sans-serif;
+  font-weight: 100;
 }
 
 
@@ -63,41 +64,56 @@ svg {
 
 // top container
 .top-container {
+  display: flex;
+  align-items: center;
+  //justify-content: center;
   background-color: $scnd-theme-color;
   padding: 10px;
   margin: auto;
-  box-shadow: 0 20px 10000px 100px #f5f5f5;
   border-bottom: solid $background-color 1px;
+  box-shadow: 0 20px 10000px 140px #FAFAFA;
+  flex-direction: row-reverse;
 }
 
 #main-logo {
-  display: block;
-  margin: 10px auto 35px auto;
-  width: 40%;
-  height: 40%;
-
+  margin: 10px auto 10px auto;
+  width: 100px;
+  height: 32px;
+  //flex: 1;
+  transition: all 300ms ease-in-out 100ms;
+  opacity: 1;
+  //transform: scale(0.5);
 }
 
 // search-bar, filtering
 .search-bar {
   background-color: $scnd-theme-color;
   display: block;
-  width: 70%;
+  width: 60%;
   text-align: center;
-  margin: auto;
-  margin-top: 15px;
-  margin-bottom: 15px;
   border-radius: 40px;
+  margin-right: 10px;
   border: solid 2px $pay-button-bgnd-color;
   height: 35px;
-  font-size: 15px;
+  font-size: 11px;
   font-style: italic;
-  transition: all 300ms ease;
+  transition: all 500ms ease-in-out;
 }
 
 .search-bar:focus {
   outline: 0;
   box-shadow: 0 0 15px $slacker-color;
+  -webkit-box-shadow: 0 0 15px $slacker-color;
+  -webkit-appearance: none;
+  width: 80%;
+
+  + #main-logo {
+    //visibility: hidden;
+    filter: blur(5px);
+    transform: scale(0.7);
+    //opacity: 0;
+    //width: 0;
+  }
 }
 
 // make placeholder disappear on focus in search-bar
@@ -123,14 +139,26 @@ input:focus:-ms-input-placeholder { color:transparent; } /* oldIE ;) */
 // items
 li.item-info {
   list-style: none;
-  font-size: 25px;
-  white-space: nowrap;
+  font-size: 20px;
+  margin-top: 10px;
+  color: $main-text-color;
+  //white-space: nowrap;
+}
+
+.item-price {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: $slacker-color;
 }
 
 .items-list{
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 
 
@@ -139,9 +167,12 @@ li.item-info {
   display: flex;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
-  margin: 30px auto;
-  width: 30%;
+  margin: 30px;
+  padding: 15px;
+  width: 200px;
+  height: 280px;
   flex-direction: column;
+  border: solid $slacker-color 2px;
 }
 
 .items-flex-item {
@@ -204,3 +235,16 @@ div.item-info-container {
 
 }
 
+
+@media screen and (min-width: 768px) {
+  .search-bar {
+    margin-right: 30px;
+    width: 70%;
+    font-size: 15px;
+  }
+
+  #main-logo {
+    width: 150px;
+    height: 48px;
+  }
+}
