--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,7 @@ $font-size-bar: 40px;
 
 //colors
 $background-color: #dddddd;
-$main-text-color: #ff9fdc;
+$main-text-color: #888888;
 $scnd-theme-color: #f5f5f5;
 $slacker-color: #0E4485;
 $pay-button-bgnd-color: #135cb2
