--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -3,7 +3,8 @@ html, body {
 
 * {
   margin: 0;
-  font-family: "atlason",Helvetica,"Neue Helvetica",Arial,sans-serif; }
+  font-family: "atlason",Helvetica,"Neue Helvetica",Arial,sans-serif;
+  font-weight: 100; }
 
 .img-overlay {
   z-index: -1;
@@ -43,36 +44,44 @@ svg {
   fill: #e2e2e2; }
 
 .top-container {
+  display: flex;
+  align-items: center;
   background-color: #f5f5f5;
   padding: 10px;
   margin: auto;
-  box-shadow: 0 20px 10000px 100px #f5f5f5;
-  border-bottom: solid #dddddd 1px; }
+  border-bottom: solid #dddddd 1px;
+  box-shadow: 0 20px 10000px 140px #FAFAFA;
+  flex-direction: row-reverse; }
 
 #main-logo {
-  display: block;
-  margin: 10px auto 35px auto;
-  width: 40%;
-  height: 40%; }
+  margin: 10px auto 10px auto;
+  width: 100px;
+  height: 32px;
+  transition: all 300ms ease-in-out 100ms;
+  opacity: 1; }
 
 .search-bar {
   background-color: #f5f5f5;
   display: block;
-  width: 70%;
+  width: 60%;
   text-align: center;
-  margin: auto;
-  margin-top: 15px;
-  margin-bottom: 15px;
   border-radius: 40px;
+  margin-right: 10px;
   border: solid 2px #135cb2;
   height: 35px;
-  font-size: 15px;
+  font-size: 11px;
   font-style: italic;
-  transition: all 300ms ease; }
+  transition: all 500ms ease-in-out; }
 
 .search-bar:focus {
   outline: 0;
-  box-shadow: 0 0 15px #0E4485; }
+  box-shadow: 0 0 15px #0E4485;
+  -webkit-box-shadow: 0 0 15px #0E4485;
+  -webkit-appearance: none;
+  width: 80%; }
+  .search-bar:focus + #main-logo {
+    filter: blur(5px);
+    transform: scale(0.7); }
 
 input:focus::-webkit-input-placeholder {
   color: transparent; }
@@ -107,22 +116,35 @@ input:focus:-ms-input-placeholder {
 
 li.item-info {
   list-style: none;
-  font-size: 25px;
-  white-space: nowrap; }
+  font-size: 20px;
+  margin-top: 10px;
+  color: #888888; }
+
+.item-price {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #0E4485; }
 
 .items-list {
   display: flex;
   align-items: center;
-  flex-wrap: wrap; }
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 100px; }
 
 .items-flex {
   display: -webkit-flex;
   display: flex;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 2px;
-  margin: 30px auto;
-  width: 30%;
-  flex-direction: column; }
+  margin: 30px;
+  padding: 15px;
+  width: 200px;
+  height: 280px;
+  flex-direction: column;
+  border: solid #0E4485 2px; }
 
 .items-flex-item {
   -webkit-flex: 1;
@@ -161,10 +183,19 @@ div.item-info-container {
     padding: 15px 20px;
     transition: all 300ms ease; }
   .quantity-holder button:hover {
-    border-color: #ff9fdc;
-    color: #ff9fdc; }
+    border-color: #888888;
+    color: #888888; }
   .quantity-holder button:focus {
     outline: 0; }
+
+@media screen and (min-width: 768px) {
+  .search-bar {
+    margin-right: 30px;
+    width: 70%;
+    font-size: 15px; }
+  #main-logo {
+    width: 150px;
+    height: 48px; } }
 
 .status-flex {
   display: -webkit-flex;
@@ -203,6 +234,15 @@ div.item-info-container {
   text-align: center;
   text-decoration: none;
   line-height: 60px; }
+
+.hidden-bar {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 200ms ease-in-out; }
+
+.shown-bar {
+  opacity: 1;
+  transition: all 200ms ease-in-out; }
 
 html {
   background: #dddddd;
